2020-02-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.15

2020-02-07  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RProtoBuf-intro.Rnw: Wrapper around pre-made vignette
	* vignettes/RProtoBuf-paper.Rnw: Idem
	* vignettes/RProtoBuf-quickref.Rnw: Idem

	* DESCRIPTION (Suggests): Remove Suggests for RUnit, rmarkdown,
	knitr, pinp; (VignetteBuilder): Removed
	* docker/ci/Dockerfile: No longer install r-cran-runit

	* R/read.R: Always close connection in readASCII

2020-02-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Suggests): Add tinytest

	* inst/tinytest/*: Converted from RUnit to tinytest
	* inst/unitTests/*: Idem
	* tests/tinytest.R: Idem
	* tests/doRUnit.R: Idem

	* docker/ci/Dockerfile: Add tinytest

2020-02-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2020-02-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/wrapper_Message.cpp: Correct indexing for Message and Group

2019-06-30  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.14

	* src/wrapper_Message.cpp: Add extra parens [g++ warning]

2019-06-27  Jeroen Ooms  <jeroen@berkeley.edu>

	* Windows: Update to protobuf 3.8.0, add support for GCC 8+.

2018-11-30  Jarod G.R. Meng <jarodmeng@google.com>

	* src/wrapper_Message.cpp: Protect identical() against recursive
	messages

2018-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2018-11-26  Jarod G.R. Meng <jarodmeng@google.com>

	* R/identical.R: Add 'add.equal.Message' for Protocol Buffer message
	types to avoid the default method being called by unit test runners
	* NAMESPACE: Add S3 registration for new method

2018-11-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.13

2018-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* tests/runUnitTests.R: Rewritten matching other packages

	* man/readASCII.Rd: Set examples to \dontrun{} as occasional error