@@ -6,7 +6,7 @@ importFrom("methods", "new", "show", "as", "is")
 importFrom("utils", "str", "packageDescription")
 importFrom("stats", "update")
 importFrom("tools", "file_path_as_absolute")
-importFrom("RCurl", "basicTextGatherer", "curlPerform")
+#importFrom("RCurl", "basicTextGatherer", "curlPerform")
 importFrom("Rcpp", "evalCpp")
 
 exportClasses(
@@ -21,7 +21,7 @@ exportClasses(
 	"Message",
 
 	# rpc
-	"RpcHTTP",
+	#"RpcHTTP",
 
 	# virtual streams
 	"ZeroCopyInputStream", "ZeroCopyOutputStream",
@@ -63,7 +63,7 @@ exportMethods( "new", "[[", "[[<-", "$", "$<-", "show",
 	"input_type", "output_type",
 
 	# rpc
-	"invoke",
+#	"invoke",
 
 	# streams
 	"Next", "ByteCount", "BackUp", "Skip",
