@@ -70,9 +70,9 @@ setClass( "Message",  representation(
 
 # rpc
 
-setClass( "RpcHTTP", representation(
-	host = "character", port = "integer", root = "character"
-), prototype = list( host = "127.0.0.1", port = 4444L, root = "" ) )
+#setClass( "RpcHTTP", representation(
+#	host = "character", port = "integer", root = "character"
+#), prototype = list( host = "127.0.0.1", port = 4444L, root = "" ) )
 
 # streams
 setClass( "ZeroCopyInputStream", representation(
@@ -317,7 +317,7 @@ setMethod( "$", "EnumValueDescriptor", function(x, name ){
 
 setMethod( "$", "MethodDescriptor", function(x, name ){
 	switch( name,
-		"invoke" = function(...) invoke(x, ...),
+		#"invoke" = function(...) invoke(x, ...),
 		"implementation" = if( x@name %in% names(IMPLEMENTATIONS) ){
 			get( x@name, IMPLEMENTATIONS )
 		},
@@ -332,14 +332,14 @@ setMethod( "$", "MethodDescriptor", function(x, name ){
 	)
 } )
 
-setMethod( "$<-", "MethodDescriptor", function(x, name, value ){
-
-	if( identical( name, "implementation" ) ){
-		check_valid_implementation( x, value )
-		assign( x@name, value, envir = IMPLEMENTATIONS )
-	}
-	x
-} )
+#setMethod( "$<-", "MethodDescriptor", function(x, name, value ){
+#
+#	if( identical( name, "implementation" ) ){
+#		check_valid_implementation( x, value )
+#		assign( x@name, value, envir = IMPLEMENTATIONS )
+#	}
+#	x
+#} )
 
 setMethod( "$", "ZeroCopyInputStream", function(x, name ){
 	switch( name,
